# Offline_AI

./: .gitignore  AGENTS.md  CHAT_HISTORY_FEATURE.md  COMPLETE_BUILD_GUIDE.md  DARK_MODE_IMPLEMENTATION.md  DARK_MODE_PLAN.md  EXTREME_PERFORMANCE_REFACTOR.md  FIXES_APPLIED.md  How_works.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_AUDIT.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  README.md  done.md  plan.md  pubspec.yaml
android/app/: build.gradle.kts
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: offline_ai_app.dart
lib/core/constants/: model_catalog.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: resource_monitor.dart
lib/features/storage/: app_database.dart
lib/src/: app_controller.dart  chat_message.dart  conversation_store.dart  inference_engine.dart  model_manager.dart  model_spec.dart
lib/src/ui/: chat_bubble.dart  chat_screen.dart  download_screen.dart
offline_llm_app/: ARCHITECTURE.md  BUILD_AND_RUN.md  BUILD_CHECKLIST.md  QUICKSTART.md  README.md  pubspec.yaml
offline_llm_app/android/app/: build.gradle.kts
offline_llm_app/ios/: Podfile  llama_wrapper.podspec
offline_llm_app/ios/Runner/: Info.plist
offline_llm_app/ios/Runner.xcodeproj/: project.pbxproj
offline_llm_app/lib/: main.dart
offline_llm_app/lib/config/: app_theme.dart
offline_llm_app/lib/ffi/: llama_bindings.dart
offline_llm_app/lib/models/: chat_message.dart  conversation.dart  model_info.dart
offline_llm_app/lib/providers/: chat_provider.dart  conversation_provider.dart  streaming_message_notifier.dart  theme_provider.dart
offline_llm_app/lib/screens/: chat_screen.dart  model_selection_screen.dart  settings_screen.dart
offline_llm_app/lib/services/: conversation_storage.dart  llama_service.dart  model_manager.dart
offline_llm_app/lib/utils/: lru_cache.dart
offline_llm_app/lib/widgets/: chat_bubble.dart  chat_input.dart  conversation_drawer.dart  streaming_message_bubble.dart
offline_llm_app/linux/: CMakeLists.txt
offline_llm_app/linux/runner/: my_application.cc
offline_llm_app/macos/Runner.xcodeproj/: project.pbxproj
offline_llm_app/native/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
offline_llm_app/scripts/: setup.sh
offline_llm_app/test/: widget_test.dart
offline_llm_app/web/: index.html  manifest.json
offline_llm_app/windows/: CMakeLists.txt
offline_llm_app/windows/runner/: Runner.rc  main.cpp
scripts/: build_llama_android.bat  build_llama_android.ps1
test/: widget_test.dart
(+25 files in other folders)
